--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -135,3 +135,7 @@ mat-card img {
 ::ng-deep .mat-expansion-indicator {
   margin-right: 20px !important;
 }
+
+::ng-deep .mat-expansion-panel {
+  box-shadow: 0px 0px 0px 0px white !important;
+}
