📦 add search in request

--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-image-dialog/history-image-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-image-dialog/history-image-dialog.component.html
@@ -14,25 +14,25 @@
         <mat-dialog-content style="margin-top: 20px;">
             <div class="container-h2__image" *ngFor="let item of data.images">
                 <mat-card class="mat-elevation-z0">
-                    <img [src]="item" style="width: 350px; height: 250px;" alt="">
+                    <img [src]="item" style="width: 350px; height: 250px;" alt=""  onError="this.src='../../../../../../../assets/img/camara.png'" />
                 </mat-card>                
             </div>  
             <form [formGroup]="createForm">
-                <!-- Photo  -->
                 <div style="margin: 16px 0; text-align: center">
-                  <img class="w3-card-4" (click)="photoURL.click()" *ngIf="createForm.get('photoURL').value != null"
-                    style="max-width: 100%; max-height: 200px; object-fit: contain" [src]="createForm.get('photoURL').value"
-                    alt="fotografía" />
-                  <img class="w3-card-4" (click)="photoURL.click()" *ngIf="createForm.get('photoURL').value == null"
-                    style="max-width: 100%; max-height: 200px; object-fit: contain" [src]="noImage" alt="sin fotografía" />
-            
-                  <mat-progress-bar *ngIf="photos?.resizing$.photoURL | async" style="width: 100%" mode="indeterminate">
-                  </mat-progress-bar>
-                  <span *ngIf="photos.resizing$.photoURL | async" class="w3-small ms-color-11 ms-font-montserrat"
-                    style="width: 100%">*comprimiendo</span>
-                  <input style="display: none" #photoURL type="file" accept="image/*"
-                    (change)="addNewPhoto('photoURL', photoURL.files)" />
+                    <img class="w3-card-4" (click)="photoURL.click()" *ngIf="createForm.get('photoURL').value != null"
+                      style="max-width: 100%; max-height: 200px; object-fit: contain" [src]="createForm.get('photoURL').value"
+                      alt="fotografía" />
+                    <img class="w3-card-4" (click)="photoURL.click()" *ngIf="createForm.get('photoURL').value == null"
+                      style="max-width: 100%; max-height: 200px; object-fit: contain" [src]="noImage" alt="sin fotografía" />
+              
+                    <mat-progress-bar *ngIf="photos?.resizing$.photoURL | async" style="width: 100%" mode="indeterminate">
+                    </mat-progress-bar>
+                    <span *ngIf="photos.resizing$.photoURL | async" class="w3-small ms-color-11 ms-font-montserrat"
+                      style="width: 100%">*comprimiendo</span>
+                    <input style="display: none" #photoURL type="file" accept="image/*"
+                      (change)="addNewPhoto('photoURL', photoURL.files)" />
                 </div>
+                
                 
               </form>                 
            
