--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -6,159 +6,109 @@
         <mat-icon mat-list-icon>settings</mat-icon>
       </div>
       <span class="ms-fill"></span>
+      <!-- <div class="requests__title--search mat-elevation-z4">
+        <button mat-button class="requests__title--button">
+          <mat-icon>search</mat-icon>
+        </button>
+        <input matInput placeholder="Taller" name="search" class="requests__title--input" />
+      </div> -->
+     
+      <!-- <div *ngIf="taller$ |async as tallers" style="background: white;" >
+      <mat-form-field appearance="outline"  >
+        <mat-label>Selecione un Taller</mat-label>
+        <mat-select  >
+          <mat-option  *ngFor="let item of tallers" [value]="item.workshop">{{item.workshop}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div> -->
+
+    <!-- <mat-form-field class="content w3-small" appearance="outline">
+      <mat-icon matPrefix></mat-icon>
+      <mat-label>Estado</mat-label>
+      <mat-select [formControl]="tallerForm">
+          <mat-option value="Todos">Todos</mat-option>
+          <mat-option *ngFor="let stat of status" [value]="stat">
+              {{stat}}
+          </mat-option>
+      </mat-select>
+    </mat-form-field> -->
+
+   <!--  <mat-form-field color="primary" *ngIf="tallerList$ | async as tallers" class="content w3-small toolbar_item"
+      appearance="outline" style="width: 150px;">
+      <mat-label>Categoria</mat-label>
+      <mat-icon matPrefix></mat-icon>
+      <mat-icon matSuffix>arrow_drop_down</mat-icon>
+      <input [formControl]="tallerForm" [matAutocomplete]="categoryAutocomplete" type="text" matInput>
+      <mat-autocomplete autoActiveFirstOption #categoryAutocomplete="matAutocomplete" [displayWith]="showTaller">
+        <mat-option [value]="''">
+          Todos
+        </mat-option>
+        <mat-option *ngFor="let taller of tallers" [value]="taller">
+          {{taller.workshop}}
+        </mat-option>
+      </mat-autocomplete>
+      <mat-error>
+        <span *ngIf="tallerForm.errors?.required">Por favor, complete el campo.</span>
+        <span *ngIf="tallerForm.errors?.invalid">Dato inválido. Complete con alguna opción válida.</span>
+      </mat-error>
+    </mat-form-field> -->
+
       <div class="requests__title--search mat-elevation-z4">
         <button mat-button class="requests__title--button">
           <mat-icon>search</mat-icon>
         </button>
-        <input matInput placeholder="Buscar" name="search" class="requests__title--input" />
+        <form [formGroup]="searchForm" style="text-align: center;margin-top:10px ;">
+           <input matInput placeholder="Buscar" name="search" class="requests__title--input" formControlName="ot" />      
+        </form>
       </div>
 
     </div>
     <div class="requests__quantity">
-      <span>10</span>
+      <span>{{counter}}</span>
     </div>
+  </div>
+ 
+  <div class="cards-container" *ngIf="evaluation$|async as evaluations">
+
+    <div class="box mat-elevation-z2" *ngFor="let item of evaluations">
+      <div class="header-box">
+        <div class="priority"></div>
+        <div>
+          <mat-menu #requestsMenu="matMenu">
+            <button mat-menu-item (click)="initDialog()">
+              <mat-icon>play_circle_outline</mat-icon> Iniciar
+            </button>
+            <button mat-menu-item (click)="obsDialog()">
+              <mat-icon>visibility</mat-icon> Observacion
+            </button>
+            <button mat-menu-item (click)="timeline()">
+              <mat-icon>timeline</mat-icon> Línea de tiempo
+            </button>
+          </mat-menu>
+          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="info-box">
+        <div class="lj">OT 00000 - <span>{{item.otMain}}</span> </div>
+        <div class="info-row">Componente: <span>{{item.otChild}} </span> </div>
+        <div class="info-row"> Nro parte: <span> {{item.partNumber}}</span> </div>
+        <div class="info-row"> Fecha: <span>{{(item.registryDate['seconds'] *1000) | date:'dd/MM/yyyy - h:mm:ss'}}</span> </div>
+      </div>
+      <div>
+        <div class="progress-time"></div>
+        <div class="progress-dynamic">
+          <div class="progress-transparent"></div>
+          <div class="progress-black"></div>
+        </div>
+        <div class="progress-view">40 min</div>
+      </div>
+    </div>
+    
   </div>
 
-  <div class="cards-container">
-    <div class="box mat-elevation-z2">
-      <div class="header-box">
-        <div class="priority"></div>
-        <div>
-          <mat-menu #requestsMenu="matMenu">
-            <button mat-menu-item (click)="initDialog()">
-              <mat-icon>play_circle_outline</mat-icon> Iniciar
-            </button>
-            <button mat-menu-item (click)="obsDialog()">
-              <mat-icon>visibility</mat-icon> Observacion
-            </button>
-            <button mat-menu-item (click)="timeline()">
-              <mat-icon>timeline</mat-icon> Línea de tiempo
-            </button>
-          </mat-menu>
-          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        </div>
-      </div>
-      <div class="info-box">
-        <div class="lj">OT 00000 - <span>(Orden de trabajo) </span> </div>
-        <div class="info-row">Componente: <span>XXXXXX </span> </div>
-        <div class="info-row"> Nro parte: <span> XXXXXX</span> </div>
-        <div class="info-row"> Fecha: <span>03/03/2020 - 07:30:45 </span> </div>
-      </div>
-      <div>
-        <div class="progress-time"></div>
-        <div class="progress-dynamic">
-          <div class="progress-transparent"></div>
-          <div class="progress-black"></div>
-        </div>
-        <div class="progress-view">40 min</div>
-      </div>
-    </div>
-    <div class="box mat-elevation-z2">
-      <div class="header-box">
-        <div class="priority"></div>
-        <div>
-          <mat-menu #requestsMenu="matMenu">
-            <button mat-menu-item (click)="initDialog()">
-              <mat-icon>play_circle_outline</mat-icon> Iniciar
-            </button>
-            <button mat-menu-item (click)="obsDialog()">
-              <mat-icon>visibility</mat-icon> Observacion
-            </button>
-            <button mat-menu-item (click)="timeline()">
-              <mat-icon>timeline</mat-icon> Línea de tiempo
-            </button>
-          </mat-menu>
-          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        </div>
-      </div>
-      <div class="info-box">
-        <div class="lj">OT 00000 - <span>(Orden de trabajo) </span> </div>
-        <div class="info-row">Componente: <span>XXXXXX </span> </div>
-        <div class="info-row"> Nro parte: <span> XXXXXX</span> </div>
-        <div class="info-row"> Fecha: <span>03/03/2020 - 07:30:45 </span> </div>
-      </div>
-      <div>
-        <div class="progress-time"></div>
-        <div class="progress-dynamic">
-          <div class="progress-transparent"></div>
-          <div class="progress-black"></div>
-        </div>
-        <div class="progress-view">40 min</div>
-      </div>
-    </div>
-    <div class="box mat-elevation-z2">
-      <div class="header-box">
-        <div class="priority"></div>
-        <div>
-          <mat-menu #requestsMenu="matMenu">
-            <button mat-menu-item (click)="initDialog()">
-              <mat-icon>play_circle_outline</mat-icon> Iniciar
-            </button>
-            <button mat-menu-item (click)="obsDialog()">
-              <mat-icon>visibility</mat-icon> Observacion
-            </button>
-            <button mat-menu-item (click)="timeline()">
-              <mat-icon>timeline</mat-icon> Línea de tiempo
-            </button>
-          </mat-menu>
-          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        </div>
-      </div>
-      <div class="info-box">
-        <div class="lj">OT 00000 - <span>(Orden de trabajo) </span> </div>
-        <div class="info-row">Componente: <span>XXXXXX </span> </div>
-        <div class="info-row"> Nro parte: <span> XXXXXX</span> </div>
-        <div class="info-row"> Fecha: <span>03/03/2020 - 07:30:45 </span> </div>
-      </div>
-      <div>
-        <div class="progress-time"></div>
-        <div class="progress-dynamic">
-          <div class="progress-transparent"></div>
-          <div class="progress-black"></div>
-        </div>
-        <div class="progress-view">40 min</div>
-      </div>
-    </div>
-    <div class="box mat-elevation-z2">
-      <div class="header-box">
-        <div class="priority"></div>
-        <div>
-          <mat-menu #requestsMenu="matMenu">
-            <button mat-menu-item (click)="initDialog()">
-              <mat-icon>play_circle_outline</mat-icon> Iniciar
-            </button>
-            <button mat-menu-item (click)="obsDialog()">
-              <mat-icon>visibility</mat-icon> Observacion
-            </button>
-            <button mat-menu-item (click)="timeline()">
-              <mat-icon>timeline</mat-icon> Línea de tiempo
-            </button>
-          </mat-menu>
-          <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-        </div>
-      </div>
-      <div class="info-box">
-        <div class="lj">OT 00000 - <span>(Orden de trabajo) </span> </div>
-        <div class="info-row">Componente: <span>XXXXXX </span> </div>
-        <div class="info-row"> Nro parte: <span> XXXXXX</span> </div>
-        <div class="info-row"> Fecha: <span>03/03/2020 - 07:30:45 </span> </div>
-      </div>
-      <div>
-        <div class="progress-time"></div>
-        <div class="progress-dynamic">
-          <div class="progress-transparent"></div>
-          <div class="progress-black"></div>
-        </div>
-        <div class="progress-view">40 min</div>
-      </div>
-    </div>
-  </div>
+
+
+  
 </div>
