--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.scss
@@ -41,7 +41,7 @@
         &--search {
             display: flex;
             min-width: 100px;
-            width: 45%;
+            width: 30%;
             padding-left: 15px;
             font-family: "Montserrat", sans-serif;
             font-size: 14px;
@@ -89,11 +89,14 @@
 }
 
 .cards-container {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 30px;
-    background: #f0eded
-    ;
+    //display: flex;
+    //justify-content: space-evenly;
+    padding: 20px;
+    background: #f0eded;
+    display: grid;
+    grid-column-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
 }
 
 .box {
@@ -104,8 +107,8 @@
     background: #ffffff;
     border-radius: 10px;
     position: relative;
-    width: 250px;
-}
+    width: 200px;
+}    
 
 .header-box {
     border-bottom: 1px solid #9e9e9e;
