📦 add start  and obervation in history

--- a/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
+++ b/src/app/main/pages/evaluations/evaluations-requests/evaluations-requests.component.html
@@ -91,8 +91,8 @@
         </div>
       </div>
       <div class="info-box">
-        <div class="lj">OT 00000 - <span>{{item.otMain}}</span> </div>
-        <div class="info-row">Componente: <span>{{item.otChild}} </span> </div>
+        <div class="lj"><span>{{item.otMain}}</span> </div>
+        <div class="info-row">OT Child: <span>{{item.otChild}} </span> </div>
         <div class="info-row"> Nro parte: <span> {{item.partNumber}}</span> </div>
         <div class="info-row"> Fecha: <span>{{(item.registryDate['seconds'] *1000) | date:'dd/MM/yyyy - h:mm:ss'}}</span> </div>
       </div>
