--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -63,14 +63,14 @@
     <mat-divider style="margin-top: 20px;"></mat-divider>
     <form [formGroup]="finalizeForm" autocomplete="off" class="form-container">
         <div class="form-container__form-inputs">
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline"  id="result">
                 <mat-label>Resultado</mat-label>
                 <input matInput placeholder="Resultado" formControlName="result">
                 <mat-error *ngIf="finalizeForm.controls['result'].errors">
                     Campo <strong>requerido.</strong>
                 </mat-error>
             </mat-form-field>
-            <mat-form-field appearance="outline">
+            <mat-form-field appearance="outline" id="kindOfTest">
                 <mat-label>Tipo de ensayo</mat-label>
                 <input matInput placeholder="Tipo de ensayo" formControlName="kindOfTest">
                 <mat-error *ngIf="finalizeForm.controls['kindOfTest'].errors">
@@ -91,7 +91,7 @@
         <div *ngFor="let imgUpload of imagesUpload;let i=index">
             <label [for]="i">
                 <mat-card class="mat-elevation-z0">
-                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'"/>
+                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer"/>
                 </mat-card>
             </label>
             <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)"
@@ -102,5 +102,5 @@
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
     <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
-        (click)="onSave()">GUARDAR</button>
+        (click)="onSubmit()">GUARDAR</button>
 </mat-dialog-actions>
