--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.scss
@@ -32,7 +32,6 @@
     }
 }
 
-
 .footer__btn-close {
     color: #b00020;
     border: 1px solid #b00020;
@@ -70,5 +69,10 @@ mat-card {
 img {
     width: 100%;
     height: 300px;
+
+}
+
+.pointer{
     object-fit: contain;
+    cursor: pointer;
 }
