--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.scss
@@ -12,7 +12,7 @@
     &__title {
         display: flex;
         align-items: stretch;
-        width: 90%;
+        width: 93%;
         background: #333333;
         border-radius: 20px 0px 0px 0px;
         height: 65px;
@@ -41,7 +41,7 @@
         &--search {
             display: flex;
             min-width: 100px;
-            width: 45%;
+            width: 30%;
             padding-left: 15px;
             font-family: "Montserrat", sans-serif;
             font-size: 14px;
@@ -57,6 +57,8 @@
             width: 100%;
             margin-top: 0;
             color: #828282;
+            border: transparent;
+            border-radius: 0px 20px 20px 20px;
 
             &::placeholder {
                 color: #aeaeae;
@@ -82,16 +84,19 @@
         font-weight: bold;
         font-size: 3em;
         //border: 1px solid #333333;
-        border-radius: 0px 0px 0px 0px;
+        border-radius: 0px 30px 0px 0px;
     }
 }
 
 .cards-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 30px;
+    //display: flex;
+    //justify-content: space-evenly;
+    padding: 20px;
     background: #f0eded;
+    display: grid;
+    grid-column-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
 }
 
 .box {
@@ -102,9 +107,8 @@
     background: #ffffff;
     border-radius: 10px;
     position: relative;
-    width: 250px;
-    // display: flex;
-}
+    width: 200px;
+}    
 
 .header-box {
     border-bottom: 1px solid #9e9e9e;
@@ -217,6 +221,7 @@
     box-sizing: content-box;
     border-radius: 0px 0px 10px 10px;
 }
+
 
 input {
     border: none;
