--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.html
@@ -11,7 +11,7 @@
         </div> -->        
     </h2>
     <mat-divider></mat-divider>
-    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+    <!-- <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar> -->
 
     <input #fileInput2 style="display: none" type="file" (change)=" onFileSelected($event)" accept=".xls,.xlsx"
     id="fileInput2">
@@ -20,76 +20,51 @@
         SELECIONE ARCHIVO
     </button>
         <mat-dialog-content style="margin-top: 20px;">
-            <div class="container-table">   
-                <table mat-table [dataSource]="historyDataSource" class="mat-elevation-z8">
-            
-                  <ng-container matColumnDef="otMain">
-                    <th mat-header-cell *matHeaderCellDef class="table-header"> OT MAIN </th>
-                    <td mat-cell *matCellDef="let element"> {{element.otMain}} </td>
-                  </ng-container>
-            
-                  <ng-container matColumnDef="otChild">
-                    <th mat-header-cell *matHeaderCellDef class="table-header">OT CLILD </th>
-                    <td mat-cell *matCellDef="let element"> {{element.otChild}} </td>
-                  </ng-container>
-            
-                  <ng-container matColumnDef="position"  >
-                    <th mat-header-cell *matHeaderCellDef class="table-header" > Correlativo </th>
-                    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-                  </ng-container>
-            
-                  <ng-container matColumnDef="partNumber" >
-                    <th mat-header-cell *matHeaderCellDef class="table-header" >Nro de parte</th>
-                    <td mat-cell *matCellDef="let element"> {{element.partNumber}} </td>
-                  </ng-container>
-            
-                  <ng-container matColumnDef="description" >
-                    <th mat-header-cell *matHeaderCellDef class="table-header" >Descripcion </th>
-                    <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-                  </ng-container>
-                          
-                  <ng-container matColumnDef="internalStatus" >
-                    <th mat-header-cell *matHeaderCellDef class="table-header" > Estado </th>
-                    <td mat-cell *matCellDef="let element">
-                        {{element.internalStatus}}
-                    </td>
-                  </ng-container>
-            
-                  <ng-container matColumnDef="result" >
-                      <th mat-header-cell *matHeaderCellDef class="table-header" > Resultado </th>
-                      <td mat-cell *matCellDef="let element"> {{element.result}} </td>
+            <ng-container *ngIf="settingDataSource.data.length; else default">
+                <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+                <div style="overflow: auto;">
+                  <table mat-table [dataSource]="settingDataSource" matSort class="mat-elevation-z8">
+                  
+                    <ng-container matColumnDef="otMain">
+                      <th mat-header-cell *matHeaderCellDef class="table-header"> OT MAIN </th>
+                      <td mat-cell *matCellDef="let element"> {{element.otMain}} </td>
                     </ng-container>
-            
-                  <ng-container matColumnDef="observations" >
-                      <th mat-header-cell *matHeaderCellDef class="table-header" > Observaciones </th>
-                      <td mat-cell *matCellDef="let element"> {{element.observations}} </td>
+              
+                    <ng-container matColumnDef="otChild">
+                      <th mat-header-cell *matHeaderCellDef class="table-header">OT CLILD </th>
+                      <td mat-cell *matCellDef="let element"> {{element.otChild}} </td>
                     </ng-container>
-            
-                  <ng-container matColumnDef="quantity">
+              
+                    <ng-container matColumnDef="position"  >
+                      <th mat-header-cell *matHeaderCellDef class="table-header" > Correlativo </th>
+                      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                    </ng-container>
+              
+                    <ng-container matColumnDef="partNumber" >
+                      <th mat-header-cell *matHeaderCellDef class="table-header" >Nro de parte</th>
+                      <td mat-cell *matCellDef="let element"> {{element.partNumber}} </td>
+                    </ng-container>
+              
+                    <ng-container matColumnDef="description" >
+                      <th mat-header-cell *matHeaderCellDef class="table-header" >Descripcion </th>
+                      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="quantity">
                       <th mat-header-cell *matHeaderCellDef class="table-header"  > Cantidad </th>
                       <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
                   </ng-container>
-            
-                  <ng-container matColumnDef="workshop">
-                      <th mat-header-cell *matHeaderCellDef  class="table-header" > Taller </th>
-                      <td mat-cell *matCellDef="let element"> {{element.workshop}} </td>
-                  </ng-container>
-            
+  
                   <ng-container matColumnDef="status">
                       <th mat-header-cell *matHeaderCellDef class="table-header" >Tipo de atencion </th>
                       <td mat-cell *matCellDef="let element"> {{element.status}} </td>
                   </ng-container>
             
-                  <ng-container matColumnDef="registryDate">
-                      <th mat-header-cell *matHeaderCellDef class="table-header"  > Fecha de Solicitud </th>
-                      <td mat-cell *matCellDef="let element"> {{(element.registryDate.seconds * 1000) | date : 'dd/MM/yy'}} </td>
-                  </ng-container> 
-            
                   <ng-container matColumnDef="user">
                       <th mat-header-cell *matHeaderCellDef class="table-header"  > Usuario </th>
                       <td mat-cell *matCellDef="let element"> {{element.user}} </td>
                   </ng-container>  
-            
+  
                   <ng-container matColumnDef="wof">
                       <th mat-header-cell *matHeaderCellDef class="table-header"  >Solicitud TR </th>
                       <td mat-cell *matCellDef="let element"> {{element.wof}} </td>
@@ -99,15 +74,88 @@
                       <th mat-header-cell *matHeaderCellDef class="table-header"   class="table-header" > Trabajo </th>
                       <td mat-cell *matCellDef="let element"> {{element.task}} </td>
                   </ng-container>                   
-                    
-                  <tr mat-header-row *matHeaderRowDef="improvementDisplayedColumns"></tr>
-                  <tr mat-row *matRowDef="let row; columns: improvementDisplayedColumns;"></tr>
-                </table>
-              </div>            
-           
+                  
+                  <ng-container matColumnDef="observations" >
+                      <th mat-header-cell *matHeaderCellDef class="table-header" > Observaciones </th>
+                      <td mat-cell *matCellDef="let element"> {{element.observations}} </td>
+                    </ng-container>
+            
+                  <ng-container matColumnDef="workshop">
+                      <th mat-header-cell *matHeaderCellDef  class="table-header" > Taller </th>
+                      <td mat-cell *matCellDef="let element"> {{element.workshop}} </td>
+                  </ng-container>
+                  
+                  <ng-container matColumnDef="registryDate">
+                      <th mat-header-cell *matHeaderCellDef class="table-header"  > Fecha de Solicitud </th>
+                      <td mat-cell *matCellDef="let element"> {{element.registryDate | date : 'dd/MM/yy'}} </td>
+                  </ng-container> 
+                  
+                  <ng-container matColumnDef="result" >
+                      <th mat-header-cell *matHeaderCellDef class="table-header" > Resultado </th>
+                      <td mat-cell *matCellDef="let element"> {{element.result}} </td>
+                 </ng-container>
+                            
+                  <ng-container matColumnDef="kindOfTest" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" >Ensayo </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.kindOfTest}}
+                    </td>
+                  </ng-container>
+  
+                  <ng-container matColumnDef="comments" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" > Comentarios </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.comments}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="createdAt" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" > Inspector </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.createdAt| date:"dd/MM/yyyy"}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="createdBy" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" > Inspector </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.createdBy}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="editedAt" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" > Fecha proceso </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.editedAt | date:"dd/MM/yyyy"}}
+                    </td>
+                  </ng-container>
+                  <ng-container matColumnDef="editedBy" >
+                    <th mat-header-cell *matHeaderCellDef class="table-header" > Fecha cierre </th>
+                    <td mat-cell *matCellDef="let element">
+                        {{element.editedBy}}
+                    </td>
+                  </ng-container>  
+          
+                    <tr mat-header-row *matHeaderRowDef="settingDisplayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: settingDisplayedColumns;"></tr>
+                  </table>
+                </div>
+                <mat-paginator #settingPaginator class="ms-paginator" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+                </mat-paginator>
+              </ng-container>
+              <ng-template #default>
+                <div class="default">
+                  <span>
+                    <mat-icon style="vertical-align: middle;">upload</mat-icon> Adjunte archivo
+                  </span>
+                </div>
+              </ng-template>
+            
         </mat-dialog-content>
+
         <mat-dialog-actions align="end">
-            <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-            <button type="button" mat-raised-button color="primary" class="footer__btn-save" (click)="save()">SI, BORRAR</button>
+            <button type="file" aria-label="add" mat-button class="footer__btn-close" (click)="clearDataTable()">
+                CANCELAR
+            </button>
+            <button type="file" aria-label="add" mat-button class="footer__btn-save" (click)="saveDataTable()" [disabled]="!settingDataSource.data.length">
+                GUARDAR
+            </button>
         </mat-dialog-actions>
 </div> 
