--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-upload-file-dialog/history-upload-file-dialog.component.scss
@@ -11,3 +11,24 @@
     margin-top: 30px;
     margin-left: 30px;
   }
+  .table-header{
+    font-weight: bold;
+    padding: 10px;
+  }
+
+  .footer {
+    text-align: end;
+    margin: 50px 10px 50px 10px;
+  }
+  .footer__btn-close {
+    color: #b00020;
+    border: 1px solid #b00020;
+    margin-right: 20px;
+    padding: 0px 30px 0px 30px;
+  }
+  .footer__btn-save {
+    background: #6200ee;
+    color: white;
+    padding: 0px 30px 0px 30px;
+  }
+  
