:art: Finalize and image dialog

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -63,7 +63,7 @@
     <mat-divider style="margin-top: 20px;"></mat-divider>
     <form [formGroup]="finalizeForm" autocomplete="off" class="form-container">
         <div class="form-container__form-inputs">
-            <mat-form-field appearance="outline"  id="result">
+            <mat-form-field appearance="outline" id="result">
                 <mat-label>Resultado</mat-label>
                 <input matInput placeholder="Resultado" formControlName="result">
                 <mat-error *ngIf="finalizeForm.controls['result'].errors">
@@ -91,16 +91,20 @@
         <div *ngFor="let imgUpload of imagesUpload;let i=index">
             <label [for]="i">
                 <mat-card class="mat-elevation-z0">
-                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer"/>
+                    <img [src]="imgUpload" onError="this.src='../../../../../../../assets/img/camara.png'" class="pointer" />
+                    <mat-card-actions *ngIf="imgUpload" align="end">
+                        <button mat-icon-button (click)="deleteImage(imgForDelete, i)">
+                            <mat-icon color="warn">delete</mat-icon>
+                        </button>
+                    </mat-card-actions>
                 </mat-card>
+                <mat-divider></mat-divider>
             </label>
-            <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)"
-                accept="image/x-png, image/jpg, image/jpeg" />
+            <input [id]="i" type="file" style="display: none;" (change)="uploadFile($event,i)" accept="image/x-png, image/jpg, image/jpeg" />
         </div>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button type="button" mat-stroked-button color="warn" class="footer__btn-close" mat-dialog-close>CERRAR</button>
-    <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial
-        (click)="onSubmit()">GUARDAR</button>
+    <button type="submit" mat-raised-button color="primary" class="footer__btn-save" cdkFocusInitial (click)="onSubmit()">GUARDAR</button>
 </mat-dialog-actions>
