--- a/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/evaluations-progress.component.html
@@ -32,7 +32,7 @@
               <mat-icon>stop</mat-icon>
               Finalizar
             </button>
-            <button mat-menu-item (click)="imagesDialog()">
+            <button mat-menu-item (click)="imagesDialog(item)">
               <mat-icon>add_photo_alternate</mat-icon>
               Imágenes
             </button>
