--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.scss
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-images-dialog/evaluations-images-dialog.component.scss
@@ -1,4 +1,4 @@
-.container-h2 {
+.container-image {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -42,15 +42,18 @@
     padding: 0px 30px 0px 30px;
 }
 
-.card-img {
-    display: flex;
-    justify-content: space-evenly;
-    &__background {
-        height: 233px;
-        width: 347px;
-        background: url(../../../../../../../assets/img/camara.png);
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-        background-position: center top;
-    }
+mat-card {
+    max-width: 100%;
+    // max-height: 300px;
+}
+
+img {
+    width: 100%;
+    height: 300px;
+
+}
+
+.pointer{
+    object-fit: contain;
+    cursor: pointer;
 }
