:hammer: refactoring upload files XLS

--- a/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-history/dialogs/history-observation-dialog/history-observation-dialog.component.html
@@ -18,7 +18,7 @@
             <p ><span style="font-weight: bold;"> N° de parte :</span> {{data.partNumber ? data.partNumber : ''}}</p>
             <p ><span style="font-weight: bold;"> Descripcion :</span> {{data.description ? data.description : ''}}</p>
             <p ><span style="font-weight: bold;"> Tipo de Atencion :</span> {{data.status ? data.status : ''}}</p>
-            <p ><span style="font-weight: bold;"> Usuario :</span> {{data.user ? data.user : ''}} </p>
+            <p ><span style="font-weight: bold;"> Usuario :</span> {{data.createdBy ? data.createdBy : ''}} </p>
             <p ><span style="font-weight: bold;"> WOF (Orden de Fabricacion) :</span> {{data.wof ? data.wof : ''}}</p>
             <p ><span style="font-weight: bold;"> Trabajo :</span> {{data.task ? data.task : ''}}</p>
            
