:art: :bug: Fix merge

--- a/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
+++ b/src/app/main/pages/evaluations/evaluations-progress/dialogs/evaluations-finalize-dialog/evaluations-finalize-dialog.component.html
@@ -41,7 +41,7 @@
         </tr>
         <tr>
             <td>Usuario:</td>
-            <td>{{data.user}}</td>
+            <td>{{data.createdBy}}</td>
         </tr>
         <tr>
             <td>WOF:</td>
